product/middleware/rabbitmq/ha/svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq-headless
  namespace: middleware
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: amqp
      port: 5672
    - name: http
      port: 15672
  selector:
    app: rabbitmq
---
kind: Service
apiVersion: v1
metadata:
  namespace: middleware
  name: rabbitmq-service
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: amqp
      protocol: TCP
      port: 5672
  selector:
    app: rabbitmq
